Day-2/ingress/simple-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-deployment
  labels:
    app: go-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: prajyot7/go-web-app:v1
        ports:
        - containerPort: 8080
